		- Probability output for multi-class SVMs is now supported using various
		  heuristics. Thanks to Shell Xu Hu.
		- Added an "equals" method to all Shogun objects that recursively
		  compares all registered parameters with those of another instance -- 
		  up to a specified accuracy.
		- Multiclass LDA. Thanks to Kevin Hughes.
	* Bugfixes:
		- Fix json serialization.
		- Fixed bugs in FITC inference method that caused wrong posterior results.
		- Fixed bugs in GP Regression that caused negative values for the variances.
		- Fixed two memory errors in the streaming-features framework.
	* Cleanup and API Changes:
		- Rename HMSVMLabels to SequenceLabels
		- Refactored method to fit a sigmoid to SVM scores, now in CStatistics,
		  still called from CBinaryLabels.
		- Use Dynamic arrays to hold preprocessors in features instead of raw pointers.
		- Use Dynamic arrays to hold Features in CombinedFeatures.
		- Use Dynamic arrays to hold Kernels in CombinedKernels/ProductKernels.
		- Use Eigen3 for GPs, LDA

2013-03-17 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 2.1.0 (libshogun 13.0, data 0.5, parameter 1)
	* This release also contains several enhancements, cleanups and bugfixes:
	* Features:
		- Linear Time MMD two-sample test now works on streaming-features, which
		  allows to perform tests on infinite amounts of data. A block size may
		  be specified for fast processing. The below features were also added.
		  By Heiko Strathmann.
		- It is now possible to ask streaming features to produce an instance
		  of streamed features that are stored in memory and returned as a
		  CFeatures* object of corresponding type. See
		  CStreamingFeatures::get_streamed_features().
		- New concept of artificial data generator classes: Based on streaming
		  features. First implemented instances are CMeanShiftDataGenerator and
		  CGaussianBlobsDataGenerator.
		  Use above new concepts to get non-streaming data if desired.