@@ -1,0 +1,6 @@
+int main(void)
+{
+	int i = nullptr;
+
+	return 1;
+}
