@@ -5,7 +5,7 @@ include_directories(${OCTAVE_INCLUDE_DIR})
 GENERATE_MODULAR_TARGET(octave ${CMAKE_CURRENT_SOURCE_DIR} ${OCTAVE_LIBRARIES})
 
 INSTALL(TARGETS octave_modular
-	LIBRARY DESTINATION lib/lua/
+	LIBRARY DESTINATION lib
 	COMPONENT octave)
 
 set(CPACK_COMPONENT_OCTAVE_DISPLAY_NAME "OCTAVE interface" PARENT_SCOPE)
